Add minor tweaks

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,19 @@ bind-key -r C-l select-window -t :+
 
 set -g prefix2 C-s
 
+# remap prefix to Control + a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
